# qa-playwright-python-framework

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
pages/: base_page.py  cart_page.py  form_page.py  login_page.py  products_page.py
tests/: test_checkout.py  test_e2e_pom.py  test_pom_refactor.py  test_products.py  test_smoke.py
